# ctis

./: README.md  demo.ipynb  na.ipynb  pyproject.toml
.github/workflows/: black.yml  tests.yml
ctis/: __init__.py
ctis/instruments/: __init__.py  _instruments.py  _instruments_test.py
ctis/inverters/: __init__.py  _abc.py  _inverters.py  _inverters_test.py  _results.py
ctis/inverters/_cnn/: __init__.py  _cnn.py
ctis/inverters/_iterative/: __init__.py  _iterative.py  _iterative_test.py  _mart.py
ctis/inverters/_iterative/_mart/: __init__.py  _mart.py  _mart_test.py
ctis/inverters/merit/: __init__.py  _merit.py
ctis/regridding/: __init__.py  _weights.py
ctis/results/: __init__.py
ctis/scenes/: __init__.py  _gaussians.py  _gaussians_test.py
docs/: conf.py  index.rst  refs.bib
docs/discussions/: ideal_ctis_mart.ipynb  mart-discussion.rst
docs/discussions/richardson-lucy-analogy/: richardson-lucy-analogy.rst
docs/discussions/richardson-lucy-analogy/figures/: bishop-1.fig  bishop-2.fig  bishop-3.fig  bishop-4.fig
docs/tutorials/: ideal-instrument.ipynb  mart-iris.ipynb  simple-mart.ipynb
